# OtomoPy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/otomopy/: __init__.py  __main__.py  bot.py  channel_cache.py  config.py  holodex.py  permissions.py  webhook_manager.py
src/otomopy/commands/: __init__.py  admin.py  autocomplete.py  blacklist.py  emotes.py  relay.py  system.py
